Disable fixed background on mobile screens

--- a/webapp/public/sass/index/header.sass
+++ b/webapp/public/sass/index/header.sass
@@ -32,9 +32,6 @@ section.header
 
             background-image: url("/img/index/header-background.svg")
 
-            @include touch
-                background-attachment: fixed
-
             @include widescreen
                 background-image: none
 
